fix grade label alignment on test table header, refs #333

--- a/src/app/events/components/test-edit-grades/test-edit-grades.component.scss
+++ b/src/app/events/components/test-edit-grades/test-edit-grades.component.scss
@@ -51,6 +51,10 @@ table th {
   padding: $spacer;
 }
 
+.point-input-container {
+  width: 5em;
+}
+
 @include media-breakpoint-up(sm) {
   .table-responsive-wrapper {
     display: block;
